--- a/streammasterwebui/index.html
+++ b/streammasterwebui/index.html
@@ -1,19 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stream Master</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Albert+Sans&family=Roboto:wght@400;500&display=swap"
-        rel="stylesheet">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Albert+Sans&family=Roboto:wght@400;500&display=swap" rel="stylesheet" />
+  </head>
 
-<body>
+  <body>
     <div id="root"></div>
     <script type="module" src="/app/index.tsx"></script>
-</body>
-
+  </body>
 </html>
