fix: custom sreams have command profiles

--- a/streammasterwebui/public/login.html
+++ b/streammasterwebui/public/login.html
@@ -157,7 +157,7 @@
             <div class="panel">
                 <div class="panel-header" style="background-color: #263238
 ">
-                    <img src="/images/sm_logo.png" alt="Image" class="logo" />
+                    <img src="/images/streammaster_logo.png" alt="Image" class="logo" />
                 </div>
 
                 <div class="panel-body" style="background-color: #21282c;">
