--- a/streammasterwebui/public/index.html
+++ b/streammasterwebui/public/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <script type="text/javascript" id="appConfig"></script>
-    <script src="%PUBLIC_URL%/initialize.js" data-no-hash></script>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/StreamMasterx64.png" />
-    <!--
+
+<head>
+  <script type="text/javascript" id="appConfig"></script>
+  <script src="%PUBLIC_URL%/initialize.js" data-no-hash></script>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/StreamMasterx64.png" />
+  <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -23,12 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Stream Master</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+  <title>Stream Master</title>
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -38,5 +40,52 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
+<script type="text/javascript">
+  // Function to get query parameters from the URL
+  function getQueryParam(param) {
+    const params = new URLSearchParams(window.location.search);
+    return params.get(param);
+  }
+
+  // Check if user is authenticated
+  (async () => {
+    try {
+      console.log('window.location.search:', window.location.search)
+      const response = await fetch('/needAuth', {
+        method: 'GET',
+        credentials: 'include', // Send cookies with the request if applicable
+        headers: {
+          'Content-Type': 'application/json'
+        }
+      });
+
+      const data = await response.json();
+
+      if (data === true) {
+        // If `needAuth` is false, user is already authenticated - redirect
+        const returnUrl = getQueryParam('ReturnUrl');
+
+        window.location.href = '/login?ReturnUrl=' + returnUrl;
+        return;
+      }
+    } catch (error) {
+      console.error('Error checking authentication status:', error);
+    }
+
+    // Set up the rest of the login page only if authentication is needed
+    var yearSpan = document.getElementById('year');
+    yearSpan.innerHTML = new Date().getFullYear();
+
+    var copyDiv = document.getElementById('copy');
+    copyDiv.classList.remove('hidden');
+
+    if (window.location.search.indexOf('loginFailed=true') > -1) {
+      var loginFailedDiv = document.getElementById('login-failed');
+      loginFailedDiv.classList.remove('hidden');
+    }
+  })();
+</script>
+
 </html>
